--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2 (build & run Docker)
 on:
   push:
     branches:
-      - main   # trigger on push to main branch
+      - master   # trigger on push to main branch
 
 jobs:
   deploy:
