--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -21,12 +21,12 @@ jobs:
           SSH_KEY: ${{ secrets.EC2_SSH_KEY }} # SSH key for EC2 instance
         run: |
           echo "$SSH_KEY" > key.pem
-          chmod 400 key.pem
+          chmod 400 key.pem 
 
       # Copy repository files to EC2
       # SSH key is used to authenticate the connection to EC2 instance
       - name: Copy files to EC2
-        run: |
+        run: | # 
           scp -o StrictHostKeyChecking=no -i key.pem -r ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/ml_app
 
       # SSH to EC2, install Docker, build and run container
