--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Debug secrets
+        run: |
+          echo "User: ${{ secrets.EC2_USER }}"
+          echo "Host: ${{ secrets.EC2_HOST }}"
+          
+
       # Set up SSH key from secret
       # SSH key is used to authenticate the connection to EC2 instance
       - name: Set up SSH key
