--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Debug secrets
         run: |
-          echo "User: ${{ secrets.EC2_USER }}"
+          echo "User: ${{ secrets.EC2_USERNAME }}"
           echo "Host: ${{ secrets.EC2_HOST }}"
           
 
@@ -33,13 +33,13 @@ jobs:
       # SSH key is used to authenticate the connection to EC2 instance
       - name: Copy files to EC2
         run: | # 
-          scp -o StrictHostKeyChecking=no -i key.pem -r ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/ml_app
+          scp -o StrictHostKeyChecking=no -i key.pem -r ./ ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/ml_app
 
       # SSH to EC2, install Docker, build and run container
       # SSH key is used to authenticate the connection to EC2 instance
       - name: SSH to EC2 and deploy Docker
         run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             set -e
             cd /home/ec2-user/ml_app || exit 0
 
