--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -49,3 +49,11 @@ jobs:
             sudo docker build -t linear-reg-api .; \
             sudo docker run -d -p 8000:8000 --name linear-reg-api linear-reg-api; \
             sudo docker ps"
+
+      - name: Show deployed app URL
+        run: |
+            echo "--------------------------------------------"
+            echo "FastAPI app is deployed successfully!"
+            echo "Access it in your browser at:"
+            echo "http://${{ secrets.EC2_HOST }}:8000/docs"
+            echo "--------------------------------------------"
