--- a/.github/workflows/ml_run.yml
+++ b/.github/workflows/ml_run.yml
@@ -29,7 +29,7 @@ jobs:
           echo "$SSH_KEY" > key.pem
           chmod 400 key.pem 
 
-      # Copy repository files to EC2
+      # Copy repository files to EC2 instance
       # SSH key is used to authenticate the connection to EC2 instance
       - name: Copy files to EC2
         run: | # 
